# ChangeLog for x11-themes/fvwm-crystal
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  05 Jan 2015; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  updated to EAPI 6, new USE flags and as well than to readme.gentoo-r1 and user eclasses.
  metadata.xml: new USE flag descriptions

  29 Jan 2014; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  removed non nedded depends, added conditional depend on x11-misc/xdg-user-dirs with USE flag.

  21 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  removed the build patch
- files/fvwm-crystal-build.patch

  21 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  uncommented python_replicate_script, it was fixed upstream.
  TODO: make it work with python-2.{5,6} too.

  21 Jun 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
+ files/fvwm-crystal-build.patch: remove the license form the installed files;
  not needed on gentoo
  fvwm-crystal-9999.ebuild: introduced license patch; reverted EPREFIX change, the gentoo devs
  don't want this see big 468680; introduced python_replicate_script but commented it
  because of shebang change in the source, this must be solved between the gentoo devs
  and upstream.
 
  07 May 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  introduced EPREFIX in install phase and in the einfo.

  05 May 2013; Dominique Michel <dominique_libre@users.sourceforge.net> fvwm-crystal-9999.ebuild:
  updated to pyrhon-r1 eclass and EAPI 5. Removed non needed USE flags.
  metadata.xml: removed non needed USE flag. Changed einfo to show correct
  addons path.
  
  25 Apr 2013; Dominique Michel <dominique_libre@users.sourceforge.net> files/fvwm-crystal:
  fixed typo in Session file