@@ -1,3 +1,3 @@
-EBUILD fvwm-crystal-9999.ebuild 2131 SHA256 22c101663af1dec82fd42093ac9b1f08a27cae3e99be721939d922b7be5bad94 SHA512 8bf8c27382b95f198e09c137073d24fa0531e07594371dd66d76f798c196f6c2fcb78ec3cc37903b8566fcf42c24a56de5d8373bcbbfe563c47509631a6388b0 WHIRLPOOL 5a627cae0582779734695e02da6a0a54c8582221314ca5bf975cb52e24cfc2de7d815218d19fbf35f6b2745ee7bf47836a80b5c5f83b67497b5e8b9b833d8d2a
-MISC ChangeLog 3951 SHA256 477f36e141acf9211c33076ae71933dfbf21615c252a4b98d9343f459bddfe4d SHA512 d5dc9b113dd260eeded0be624f7841d33f2753798dbf71060a280e464be97793b8a8a4784a2febb79d287ddf78d6896096ec571094df2125fbb8be397d35a685 WHIRLPOOL 1cbeeff0aa10e818751ae87cd61cbded5dbe5285e61d35efd4e13cc3682e1543eb1e82990ba1a6d3aa197f300d36bdf021440c891a913599a64431ad77e60d78
+EBUILD fvwm-crystal-9999.ebuild 2204 SHA256 af7ad4a54f17f724ef759995a88ecf2566f3c12ae025218557ba6e9ec70ec6b1 SHA512 6b20344deebc169888d1268e8a7f38ca857354e898bd4d06155f224f82dd576849e6e0ea799f9c328dd7b9e8d902eac811d00cc3bc11a9a7e219cd2e694a332b WHIRLPOOL f9d51029c5bae914213891ba19547891865d5aab4a1bd93302f40aa3f865428c2d67535a5336be446d09c9d7018b92926de391d28f3863cf49ee846a313f1009
+MISC ChangeLog 4108 SHA256 ee3750b1a4a9a407ba124f805cbe7c1f442eaf2036845d43a0a79cecb9a04365 SHA512 ab90986f30b80f8dd0d04d2d294a43b23578946eed866881f9ef9abbbe990214b5fe3f8e428b9b54d458408d53126a54f52b79f4636f59987764fb7057f68f43 WHIRLPOOL a4e2b1bd2c30a58b6f7c39b72b1cd48777268c07294e46d661ed55c72d688231305dd5c4a18646c783a097e6ce27a3d98c982310c14c30903052ae2086daab9d
 MISC metadata.xml 1240 SHA256 6d7bbe6fdd75271f090d9a1d1355c6aad8f37ef0d8219fb02bf2e5bf4e37b7aa SHA512 189316d3b00dc776610b0e57f0b6c7b752c31bfff2d4a37b533db65b108c1d168096fc2d864682f4ee541adf4f6c931bbb3b124ad9424f53c4775608380f0b83 WHIRLPOOL a123e89465737f713936e44ebf3caabb2aa3021c2a50bce58d5386419efaf9f983cb286055222bcb020729afca4155d06862f6e2afdb23a9bf4e4c83f7f82517
